NgBootstrap imported and tabs structure added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,27 @@
-<app-calculator></app-calculator>
+<div class="container">
+  <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
+    <li [ngbNavItem]="1">
+      <a ngbNavLink>Calculator</a>
+      <ng-template ngbNavContent>
+        <app-calculator></app-calculator>
+      </ng-template>
+    </li>
+    <li [ngbNavItem]="2">
+      <a ngbNavLink>Heroes</a>
+      <ng-template ngbNavContent>
+        <p>Heroes.</p>
+      </ng-template>
+    </li>
+    <li [ngbNavItem]="3">
+      <a ngbNavLink>Apod</a>
+      <ng-template ngbNavContent>
+        
+      </ng-template>
+    </li>
+  </ul>
+  
+  <div [ngbNavOutlet]="nav" class="mt-2"></div>
+</div>
+
+
+
