Heroes component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <li [ngbNavItem]="2">
       <a ngbNavLink>Heroes</a>
       <ng-template ngbNavContent>
-        <p>Heroes.</p>
+        <app-heroes></app-heroes>
       </ng-template>
     </li>
     <li [ngbNavItem]="3">
