Hero model added

--- a/src/app/components/heroes/heroes-list/heroes-list.component.html
+++ b/src/app/components/heroes/heroes-list/heroes-list.component.html
@@ -1,3 +1,3 @@
 <ul class="list-group">
-    <li class="list-group-item" *ngFor="let hero of myHeroes">{{hero}}</li>
+    <li class="list-group-item" *ngFor="let hero of myHeroes"> <strong> {{hero.getName()}} </strong> <br/> {{hero.getDescription()}}</li>
 </ul>
