--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
     <li [ngbNavItem]="3">
       <a ngbNavLink>Apod</a>
       <ng-template ngbNavContent>
-        
+        <app-apod></app-apod>
       </ng-template>
     </li>
   </ul>
