--- a/src/app/components/apod/apod/apod.component.html
+++ b/src/app/components/apod/apod/apod.component.html
@@ -1,1 +1,10 @@
-<p>{{apod.title}}</p>
+<div class="jumbotron">
+    <h1 class="display-3">{{apod.title}}</h1>
+    <p class="lead">{{apod.date}}</p>
+    <hr class="my-2">
+    <img [src]="apod.url" [alt]="apod.title" class="img-fluid d-block mx-auto">
+    <p class="mt-3">{{apod.explanation}}</p>
+    <p class="lead">
+        <a class="btn btn-primary btn-lg" [href]="apod.hdurl" role="button">Download</a>
+    </p>
+</div>
