--- a/src/app/components/apod/apod-show/apod-show.component.html
+++ b/src/app/components/apod/apod-show/apod-show.component.html
@@ -3,7 +3,9 @@
     <p class="lead">{{apod.date}}</p>
     <hr class="my-2">
     <img *ngIf="apod.media_type === 'image'" [src]="apod.url" [alt]="apod.title" class="img-fluid d-block mx-auto">
-    <youtube-player *ngIf="apod.media_type === 'video'" [videoId]="getVideoId(apod.url)"></youtube-player>
+    <div class="d-flex justify-content-center">
+        <youtube-player *ngIf="apod.media_type === 'video'" [videoId]="getVideoId(apod.url)"></youtube-player>
+    </div>
     <p class="mt-3">{{apod.explanation}}</p>
     <p class="lead">
         <a class="btn btn-primary btn-lg" [href]="apod.hdurl" role="button">Download</a>
