--- a/src/app/components/apod/apod/apod.component.html
+++ b/src/app/components/apod/apod/apod.component.html
@@ -1,3 +1,7 @@
-<app-apod-picker (onDateChange)="dateChanged($event)"></app-apod-picker>
+<div class="d-flex justify-content-center mb-2">
+    <app-apod-picker (onDateChange)="dateChanged($event)"></app-apod-picker>    
+</div>
+
+
 
 <app-apod-show [date]="selectedDate"></app-apod-show>
