--- a/src/app/components/forms/reactive-form/reactive-form.component.html
+++ b/src/app/components/forms/reactive-form/reactive-form.component.html
@@ -1,12 +1,12 @@
 <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
     <label for="">Name</label>
-    <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder=""
+    <input type="text" class="form-control" name="" id="" aria-xdescribedby="helpId" placeholder=""
         formControlName="name">
     <label for="">Description</label>
-    <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder=""
+    <input type="text" class="form-control" name="" id="" aria-xdescribedby="helpId" placeholder=""
         formControlName="description">
     <label for="">Alter Ego</label>
-    <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder=""
+    <input type="text" class="form-control" name="" id="" aria-xdescribedby="helpId" placeholder=""
         formControlName="alterEgo">
     <button type="submit" class="btn btn-primary mt-3" [disabled]="!profileForm.valid">Submit</button>
 </form>
