--- a/src/app/components/heroes/hero-form/hero-form.component.html
+++ b/src/app/components/heroes/hero-form/hero-form.component.html
@@ -1,7 +1,7 @@
 <div class="form-group">
     <label for="">Name</label>
-    <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="" [(ngModel)]="modelForm.name">
+    <input type="text" class="form-control" name="" id="" aria-xdescribedby="helpId" placeholder="" [(ngModel)]="modelForm.name">
     <label for="">Description</label>
-    <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="" [(ngModel)]="modelForm.description">
+    <input type="text" class="form-control" name="" id="" aria-xdescribedby="helpId" placeholder="" [(ngModel)]="modelForm.description">
     <button type="button" class="btn btn-primary mt-2" (click)="addHero()" [disabled]="(modelForm.name.length === 0)" >Add Hero</button>
 </div>
