--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/forms" >Forms</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/trivial" >Trivial</a>
+      </li>
     </ul>
   </div>
 </nav>
