--- a/src/app/components/trivial/trivial-card/trivial-card.component.html
+++ b/src/app/components/trivial/trivial-card/trivial-card.component.html
@@ -1,6 +1,6 @@
-<div class="card">
+<div class="card h-100">
     <div class="card-body">
         <h4 class="card-title">{{card.question}}</h4>
-        <button type="button" name="" id="" class="btn btn-primary btn-lg btn-block" *ngFor="let answer of card.answers">{{answer}}</button>
+        <button type="button" name="" id="" [class]="classes[i]" *ngFor="let answer of card.answers; let i=index" (click)="onAnswer(answer)" [disabled]="card.responded">{{answer}}</button>
     </div>
 </div>
