--- a/src/app/components/trivial/trivial/trivial.component.html
+++ b/src/app/components/trivial/trivial/trivial.component.html
@@ -1,6 +1,6 @@
 
-<div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-4" *ngFor="let card of cards">
+<div class="row mt-4">
+    <div class="col-sm-12 col-md-6 col-lg-4 mb-3" *ngFor="let card of cards">
         <app-trivial-card [card]="card"></app-trivial-card>
     </div>
 </div>
