score board added with infinite scroll

--- a/src/app/components/trivial/trivial/trivial.component.html
+++ b/src/app/components/trivial/trivial/trivial.component.html
@@ -1,6 +1,13 @@
-
+<div class="container" infinite-scroll
+[infiniteScrollDistance]="scrollDistance"
+[infiniteScrollUpDistance]="scrollUpDistance"
+[infiniteScrollThrottle]="throttle"
+(scrolled)="onScrollDown()">
+<h1>Score: <span class="badge badge-primary">{{score}}</span></h1>
 <div class="row mt-4">
-    <div class="col-sm-12 col-md-6 col-lg-4 mb-3" *ngFor="let card of cards">
-        <app-trivial-card [card]="card"></app-trivial-card>
+    <div class="col-sm-12 col-md-6 col-lg-4 mb-3" *ngFor="let card of cards" >
+        <app-trivial-card [card]="card" (onAnswerEvent)="handleResult($event)"></app-trivial-card>
     </div>
+</div>
+    
 </div>
